--- a/style.css
+++ b/style.css
@@ -275,13 +275,28 @@ body {
 }
 
 .project-image {
-  
+  position: static;
+  top: 0;
+  left: 0;
+  margin: 0;
 }
 
 .project-image img {
   width: 448px;
   height: 256px;
-  object-fit: cover;
+  object-fit: fill;
+}
+
+.project-image1 {
+  position: static;
+  top: 0;
+  left: 0;
+  margin: 0;
+}
+.project-image1 img {
+  width: 448px;
+  height: 256px;
+  object-fit: fill;
 }
 
 .projects p {
