--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ body {
 .user-image img {
   width: 640px;
   height: 640px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .intro .container div {
